--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <nav id="navbar" class="navbar">
         <ul>
 
-          <li class="dropdown"><a href="#"><span>Home</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="#"><span>Home</span> </i></a>
             <ul>
               <!-- <li><a href="index.html" class="active">Home 1 - index.html</a></li> -->
               
@@ -88,8 +88,8 @@
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
       <!-- <img src="assets/img/hero-carousel/hero-carousel-3.svg" class="img-fluid animated"> -->
       <br> <br> <br>
-      <h2>Th3 Shield<br><span style="font-size:25px" class="auto-type"></span></h2>
-      <h2><span style="font-size:25px" class="aut-type"></span></h2>
+      <h2>Th3 Shield<br><span style="font-size:15px" class="auto-type"></span></h2>
+      <h2><span style="font-size:15px" class="aut-type"></span></h2>
 
       <script>
       </script>
@@ -117,7 +117,7 @@
     </div>
   </section>
 
-  <section id="hero-animated" class="hero-animated d-flex align-items-center">
+  <!-- <section id="hero-animated" class="hero-animated d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
       <img src="assets/img/hero-carousel/hero-carousel-3.svg" class="img-fluid animated">
       <h2>Th3 Shield<br><span style="font-size:25px" class="auto-type"></span></h2>
@@ -133,7 +133,7 @@
         <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <main id="main">
 
@@ -186,7 +186,7 @@
 
         <div class="section-header">
           <h2>About Us</h2>
-          <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam voluptas asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p>
+          <p>We are a group of techies, fucktards, literals, and we do what we think deserves to be done. Literally we handle the internet and all its environs</p>
         </div>
 
         <div class="row g-4 g-lg-5" data-aos="fade-up" data-aos-delay="200">
