--- a/index.html
+++ b/index.html
@@ -1134,8 +1134,8 @@
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Skeeper Loyaltie</h4>
+                <span>Tech Engineer</span>
               </div>
             </div>
           </div><!-- End Team Member -->
