--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <link href="assets/css/main.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-
+  <link rel="stylesheet" href="assets/css/whatsapp.css">
 
 </head>
 
@@ -993,7 +993,9 @@
     </div>
 
   </footer><!-- End Footer -->
-
+  <a href="https://chat.whatsapp.com/GeXTenyDUU26CkEiKG1U0z" class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+    </a>
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <div id="preloader"></div>
