added urls and image path

--- a/index.html
+++ b/index.html
@@ -753,14 +753,14 @@
           <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/skeeper.JPG" class="img-fluid" alt="">
+                <img src="assets/img/team/collins.jpeg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href="https://twitter.com/Yrn_Collo"><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/collins-ngeno"><i class="bi bi-linkedin"></i></a>
                 </div>
                 <h4>Collins </h4>
                 <span>Tech Enthusiast</span>
