--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
           <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/skeeper.JPG" class="img-fluid" alt="">
+                <img src="assets/img/team/skee.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <div class="social">
@@ -706,7 +706,7 @@
                   <a href="https://linkedin.com/in/godfrey-gudah-9a9096116/"><i class="bi bi-linkedin"></i></a>
                 </div>
                 <h4>Skeeper Loyaltie</h4>
-                <span>Tech Enthusiast</span>
+                <span>Data Analyst | Software Dev</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -732,7 +732,7 @@
           <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="600">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/skeeper.JPG" class="img-fluid" alt="">
+                <img src="assets/img/team/" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <div class="social">
