--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
           <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/skee.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/skeeper.png" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <div class="social">
