added twitter and github links

--- a/index.html
+++ b/index.html
@@ -719,8 +719,7 @@
               <div class="member-info">
                 <div class="social">
                   <a href="https://twitter.com/steiner254"><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href="https://github.com/Steiner-254"><i class="bi bi-github"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
                 <h4>Alvin Steiner</h4>
@@ -737,8 +736,7 @@
               <div class="member-info">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href="https://github.com/toxicking-techguru"><i class="bi bi-github"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
                 <h4>Toxickin Techguru</h4>
@@ -758,8 +756,7 @@
               <div class="member-info">
                 <div class="social">
                   <a href="https://twitter.com/Yrn_Collo"><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href="https://github.com/yrncollo"><i class="bi bi-github"></i></a>
                   <a href="https://www.linkedin.com/in/collins-ngeno"><i class="bi bi-linkedin"></i></a>
                 </div>
                 <h4>Collins </h4>
@@ -776,8 +773,7 @@
               <div class="member-info">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href="https://github.com/vickyke1"><i class="bi bi-github"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
                 <h4>Vicky Ke</h4>
@@ -794,8 +790,7 @@
               <div class="member-info">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href="https://github.com/vickyke1"><i class="bi bi-github"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
                 <h4>Jorgs</h4>
