--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
                   <a href="https://github.com/yrncollo"><i class="bi bi-github"></i></a>
                   <a href="https://www.linkedin.com/in/collins-ngeno"><i class="bi bi-linkedin"></i></a>
                 </div>
-                <h4>Collins </h4>
+                <h4>YrnCollo </h4>
                 <span>Tech Enthusiast</span>
               </div>
             </div>
