--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                 <div class="social">
                   <a href="https://twitter.com/steiner254"><i class="bi bi-twitter"></i></a>
                   <a href="https://github.com/Steiner-254"><i class="bi bi-github"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/steiner254/"><i class="bi bi-linkedin"></i></a>
                 </div>
                 <h4>Alvin Steiner</h4>
                 <span>Tech Enthusiast</span>
