--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
           <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="600">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/skeeper.JPG" class="img-fluid" alt="">
+                <img src="assets/img/team/toxicking-techguru.jpeg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <div class="social">
@@ -739,7 +739,7 @@
                   <a href="https://github.com/toxicking-techguru"><i class="bi bi-github"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
-                <h4>Toxickin Techguru</h4>
+                <h4>Toxicking Techguru</h4>
                 <span>Tech Enthusiast</span>
               </div>
             </div>
@@ -768,7 +768,7 @@
           <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/skeeper.JPG" class="img-fluid" alt="">
+                <img src="assets/img/team/vickyke1.jpeg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <div class="social">
