--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
               </div>
               <div class="member-info">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href="https://twitter.com/v1cky_ke"><i class="bi bi-twitter"></i></a>
                   <a href="https://github.com/vickyke1"><i class="bi bi-github"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
