--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
               </div>
               <div class="member-info">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href="https://twitter.com/Toxicking_tech"><i class="bi bi-twitter"></i></a>
                   <a href="https://github.com/toxicking-techguru"><i class="bi bi-github"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
