--- a/index.html
+++ b/index.html
@@ -799,6 +799,24 @@
                 <span>Cyber Security Enthusiast</span>
               </div>
             </div>
+          </div><!-- End Team Member -->       
+
+          <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="400">
+            <div class="team-member">
+              <div class="member-img">
+                <img src="assets/img/team/d-captainkenya.jpeg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <div class="social">
+                  <a href="https://twitter.com/D_captainkenya"><i class="bi bi-twitter"></i></a>
+                  <a href="https://github.com/D-captainkenya"><i class="bi bi-github"></i></a>
+                  <a href="https://www.linkedin.com/in/dennis-masila-a48067160/"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://d-captainkenya.medium.com/"><i class="bi bi-medium"></i></a>
+                </div>
+                <h4>D_captain</h4>
+                <span>Cybersecurity</span>
+              </div>
+            </div>
           </div><!-- End Team Member -->
 
         </div>
