automate copyright year

--- a/index.html
+++ b/index.html
@@ -991,7 +991,8 @@
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>The Shield</span></strong>. All Rights Reserved
+            &copy; <script>document.write(new Date().getFullYear());</script>
+            Copyright <strong><span>The Shield</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
            
